--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,9 +1,15 @@
-
 .headerNav{
-    background-color: yellow;
+    background-color: #f8a526;
     display: flex;
+    width: 100%;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+}
+
+.headerNav img{
+    width: 15%;
 }
 
 .icon{
@@ -17,9 +23,9 @@
 }
 
 .navigation{
-    background-color: pink;
-    width: 20%;
     display: flex;
+    margin-right: 1%;
+    gap: 10px;
     align-items: center;
     justify-content: space-evenly;
 }
