--- a/src/style/home.css
+++ b/src/style/home.css
@@ -95,6 +95,16 @@
     border-radius: 10px;
 }
 
+.newPostModal{
+    background-color: white;
+    border-radius: 10px;
+    width: 40vw;
+    height: 70vh;
+    padding: 50px;
+    margin: auto;
+    z-index: 1000; /* Ensure the modal appears above the overlay */
+}
+
 .newPost{
     display: flex;
     flex-direction: column;
