--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -1,15 +1,18 @@
 .profileContainer .headerContainer{
     display: flex;
     justify-content: center;
-    position: absolute;
-    margin-top: 2%;
-    margin-left: 20%;
-    width: 80%;
+    margin: 0 auto;
+    padding: 30px;
+    width: 30%;
+    height: 50%;
     gap: 2%;
+    background-color: rgb(226, 228, 230);
+    border-radius: 10px;
 }
 
 .profileContainer .headerContainer img{
-    width: 20%;
+    height: 50%;
+    width: 50%;
 }
 
 .profileContainer .headerContainer img:hover{
@@ -17,35 +20,150 @@
     filter: grayscale(100%);
 }
 
-#userName{
+.captionContaner #userName{
     font-size: 40px;
 }
 
 .descContainer{
-    width: 20%;
+    width: 50%;
+    background-color: rgb(190, 192, 194);
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .tempBtnContainer{
-    position: absolute;
+    position: fixed;
     display: flex;
     cursor: pointer;
     align-items: center;
     font-size: 20px;
-    gap: 5px;
+    gap: 15px;
     width: 15%;
     font-weight: bold;
     margin-left: 1%;
-    margin-top: 24%;
+    bottom: 10px;
     padding: 0 2.4% 0 0.6%;
 }
 
 .tempBtnContainer:hover{
     background-color: #a76400;
     border-radius: 10px;
-    color: white
+    color: white;
 }
 
 .tempBtn{
     width: 18%;
     height: 20%;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value to control the opacity */
+    z-index: 999; /* Ensure the overlay appears above other content */
+  }
+
+
+.editModal {
+    background-color: white;
+    border-radius: 10px;
+    width: 40vw;
+    height: 60vh;
+    padding: 50px;
+    margin: auto;
+    z-index: 1000; /* Ensure the modal appears above the overlay */
+  }
+
+
+.editModal .modalHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+    font-size: 30px;
+    margin-bottom: 10%;
+}
+
+.modalHeader button{
+    border: none;
+    font-size: 30px;
+    padding: 10px;
+    background-color: white;
+}
+
+.modalHeader button:hover{
+    background-color: rgb(226, 228, 230);
+    border-radius: 10px;
+}
+
+.profileForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.profileForm input[type=text]{
+    font-size: 20px;
+    padding: 2%;
+    width: 70%;
+}
+
+.profileForm input[type=file]{
+    cursor: pointer;
+}
+
+.profileForm textarea{
+    font-size: 20px;
+    padding: 2%;
+    resize: none;
+}
+
+.profileForm input[type=text], .newPost textarea{
+    border: 5px solid #f8a526;
+    outline: none;
+    border-radius: 10px;
+}
+
+.profileForm button{
+    background-color: #f8a526;
+    border: 3px solid #f8a526;
+    font-size: 25px;
+    font-weight: bold;
+    padding: 10px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); /* Add darker orange shadow */
+}
+
+.profileForminput[type=file]{
+    font-size: 20px;
+}
+
+.profileForm button:hover{
+    border: 3px solid #f8a526;
+    background-color: white;
+}
+
+.profileContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+.userPostContainer{
+    background-color: rgb(226, 228, 230);
+    border-radius: 10px;
+    width: 30%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2%;
+}
+
+.userPostContainer img{
+    width: 100%;
 }
