--- a/src/style/home.css
+++ b/src/style/home.css
@@ -23,6 +23,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    margin-left: 20%;
 }
 
 .postContainer{
@@ -46,6 +48,7 @@
     font-weight: bold;
     font-size: 25px;
     text-decoration: underline;
+    position: relative;
 }
 
 .postHeader{
@@ -69,40 +72,35 @@
 }
 
 .newPostModal{
+    margin: auto;
     background-color: white;
     border-radius: 10px;
-    margin: auto;
-    padding: 50px;
+    width: 40vw;
+    height: 80vh;
+    z-index: 1000; /* Ensure the modal appears above the overlay */
+}
+
+.newPostModal h1{
+    text-align: center;
 }
 
 .modalHeader{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 30px;
-    margin: 0px 13%;
+    justify-content: space-between;
+    background-color: #f8a526;
+    font-size: 28px;
+}
+
+.bodyModalContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 70vh;
 }
 
 .modalHeader button{
     border: none;
-    font-size: 30px;
-    padding: 10px;
-    background-color: white;
-}
-
-.modalHeader button:hover{
-    background-color: rgb(226, 228, 230);
-    border-radius: 10px;
-}
-
-.newPostModal{
-    background-color: white;
-    border-radius: 10px;
-    width: 40vw;
-    height: 70vh;
-    padding: 50px;
-    margin: auto;
-    z-index: 1000; /* Ensure the modal appears above the overlay */
 }
 
 .newPost{
@@ -110,17 +108,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
 }
 
 .newPost input[type=text]{
     font-size: 20px;
     padding: 2%;
-    width: 70%;
+    width: 80%;
 }
 
 .newPost input[type=file]{
     cursor: pointer;
+    margin: 2% 0;
 }
 
 .newPost textarea{
@@ -130,7 +129,7 @@
 }
 
 .newPost input[type=text], .newPost textarea{
-    border: 5px solid #f8a526;
+    border: 5px solid rgb(226, 228, 230);
     outline: none;
     border-radius: 10px;
 }
