--- a/src/style/home.css
+++ b/src/style/home.css
@@ -27,11 +27,12 @@
     margin-left: 20%;
 }
 
+/* user post feed */
 .postContainer{
-    background-color: rgb(226, 228, 230);
+    background: linear-gradient(to bottom, rgb(182, 185, 185), rgb(226, 228, 230));
     border-radius: 10px;
-    width: 30%;
-    height: 20%;
+    width: 40%;
+    height: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,6 +50,11 @@
     font-size: 25px;
     text-decoration: underline;
     position: relative;
+    cursor: pointer;
+}
+
+.userPostName:hover{
+    color: rgb(202, 131, 0);
 }
 
 .postHeader{
@@ -71,6 +77,8 @@
     margin-bottom: 5%;
 }
 
+/* modal when user presses on newpost */
+
 .newPostModal{
     margin: auto;
     background-color: white;
@@ -89,6 +97,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #f8a526;
+    padding: 10px 0px;
     font-size: 28px;
 }
 
@@ -153,4 +162,60 @@
     border: 3px solid #f8a526;
     background-color: white;
 }
+
+/* modal when user presses on another user's name */
+.userProfileModal{
+    background-color: white;
+    margin: auto;
+    width: 100vh;
+    height: 90vh;
+    z-index: 1000;
+    border-radius: 10px;
+}
+
+.userBodyModalContainer{
+    display: flex;
+    justify-content: center;
+}
+
+.userProfileModal .profileContainer{
+    display: flex;
+    background-color: rgb(226, 228, 230);
+    border-radius: 10px;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 10%;
+    padding: 5% 0px;
+    gap: 10px;
+}
+
+.userProfileModal .profileContainer img{
+    height: 30%;
+    width: 30%;
+    border-radius: 10px;
+}
+
+.profileDescContainer{
+    border-radius: 10px;
+    height: auto;
+    width: 40%;
+    padding: 10px 40px 10px 10px;
+}
+
+.userProfilePostContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.userProfilePostContainer .userPostContainer{
+    background: linear-gradient(to bottom, rgb(182, 185, 185), rgb(226, 228, 230));
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    border-radius: 10px;
+}
+
 
