--- a/src/style/home.css
+++ b/src/style/home.css
@@ -31,21 +31,53 @@
 
 /* user post feed */
 .postContainer{
-    /* background: linear-gradient(to bottom, rgb(182, 185, 185), rgb(226, 228, 230)); */
     display: flex;
-    flex-direction: row; /* Ensure the flex direction is column */
-    flex-grow: 1; /* Allow postContainer to grow to fill available space */
-    width: 60%;
+    flex-direction: row; 
+    flex-grow: 1; 
+    width: 50%;
 }
 
-
 .postContainer2{
-    background-color: beige;
-    width: 100%;
+    background: linear-gradient(to bottom, rgb(152, 154, 156), rgb(226, 228, 230));
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    width: 80%;
+}
+
+.userPostName, .postHeader, .postDesc{
+    margin-left: 5%;
 }
 
 .postContainer2 img{
     width: 100%;
+}
+
+.footerContainer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* background-color: yellow; */
+}
+
+.footerContainer .icons{
+    width: 20%;
+    height: 70%;
+    cursor: pointer;
+    position: relative;
+    /* background-color: pink; */
+    margin-top: -10%;
+    margin-bottom: 3%;
+}
+
+#commentIcon{
+    margin-left: -8%;
+}
+
+
+
+.footerContainer .icons:hover{
+    color: pink;
 }
 
 .commentPopupContainer{
@@ -262,23 +294,4 @@
     align-items: center;
     margin: auto;
     border-radius: 10px;
-}
-
-.footerContainer{
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    width: 90%;
-    margin-bottom: 2%;
-}
-
-.footerContainer .icons{
-    width: 8%;
-    height: 8%;
-    cursor: pointer;
-    position: relative;
-}
-
-.footerContainer .icons:hover{
-    color: pink;
 }
