--- a/src/style/home.css
+++ b/src/style/home.css
@@ -33,16 +33,16 @@
 .postContainer{
     display: flex;
     flex-direction: row; 
-    flex-grow: 1; 
     width: 50%;
+    gap: 10px;
 }
 
 .postContainer2{
     background: linear-gradient(to bottom, rgb(152, 154, 156), rgb(226, 228, 230));
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
-    width: 80%;
+    width: 60%;
 }
 
 .userPostName, .postHeader, .postDesc{
@@ -74,15 +74,8 @@
     margin-left: -8%;
 }
 
-
-
 .footerContainer .icons:hover{
-    color: pink;
-}
-
-.commentPopupContainer{
-    width: 30%;
-    position: relative;
+    color: rgb(202, 131, 0);
 }
 
 .commentPopupContainer h1{
@@ -93,15 +86,30 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    background-color: yellowgreen;
+    position: relative;
+    max-height: 400px;
+    /* background: linear-gradient(to bottom, rgb(152, 154, 156), rgb(226, 228, 230)); */
+    background-color: #f8a526;
+    border-radius: 10px;
     width: 150%;
 }
 
 .comments{
-    height: 80%;
+    /* max-height: 60%; */
     padding: 10px;
     margin: 10px;
+    overflow-y: auto;
+}
+
+.comments h2{
+    margin-bottom: -3%;
+}
+
+.comments p{
+    background-color: rgba(255, 255, 255, 0.582);
+    padding: 10px;
+    width: 90%;
+    border-radius: 5px;
 }
 
 .userComments .inputContainer{
@@ -112,18 +120,19 @@
 }
 
 .userComments .icon{
-    height: 50%;
-    width: 20%;
-    margin-left: -5%;
+    height: 10%;
+    width: 10%;
+    /* margin-left: -2%; */
     cursor: pointer;
 }
 
 .userComments input[type="text"]{
     margin: 10px;
     padding: 10px;
-    font: 20px;
+    font-size: 20px;
     width: 80%;
     border: none;
+    outline: none;
     border-radius: 10px;
 }
 
