--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,9 +1,7 @@
 .homeContainer .headerContainer{
     display: flex;
     align-items: center;
-    right: 0;
     padding: 0 20px;
-    position: fixed;
     gap: 10px;
 }
 
@@ -80,6 +78,9 @@
 
 .commentPopupContainer h1{
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.582);
+    margin-top: -1%;
+    padding: 20px;
 }
 
 .userComments{
