--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,7 +1,7 @@
 .headerNav{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     width: 100%;
     height: 98vh;
     margin: 10px;
@@ -24,7 +24,7 @@
     margin-left: 5%;
     margin-right: 5%;
     padding: 0px 5px;
-    gap: 5%;
+    gap: 1%;
 }
 
 .iconContainer:hover{
@@ -48,4 +48,35 @@
     height: 100vh;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+}
+
+/* temp btn on the bottom that changes with each page */
+.tempBtnContainer{
+    position: fixed;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    font-size: 20px;
+    gap: 3%;
+    width: 17%;
+    font-weight: bold;
+    margin-left: 1.6%;
+    bottom: 15px;
+    padding: 0.5% 2.5% 0.5% 0.8%;
+}
+
+.tempBtnContainer:hover{
+    background-color: #a76400;
+    border-radius: 10px;
+    color: white;
+}
+
+.tempBtnContainer p{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.tempBtnContainer .postIcon{
+    height: 60%;
+    width: 17%;
 }
