--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -32,7 +32,7 @@
     padding: 10px 40px 10px 10px;
 }
 
-.tempBtnContainer{
+/* .tempBtnContainer{
     position: fixed;
     display: flex;
     cursor: pointer;
@@ -55,7 +55,7 @@
 .tempBtn{
     width: 18%;
     height: 20%;
-}
+} */
 
 .overlay {
     position: fixed;
