--- a/src/style/home2.css
+++ b/src/style/home2.css
@@ -1,4 +1,4 @@
-.homeContainer .headerContainer{
+/* .homeContainer .headerContainer{
     display: flex;
     align-items: center;
     padding: 0 20px;
@@ -25,10 +25,10 @@
     margin-left: 20%;
     gap: 20px;
 
-}
+} */
 
 /* user post feed */
-.postContainer{
+/* .postContainer{
     display: flex;
     flex-direction: row; 
     width: 50%;
@@ -55,7 +55,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    /* background-color: yellow; */
 }
 
 .footerContainer .icons{
@@ -63,7 +62,6 @@
     height: 70%;
     cursor: pointer;
     position: relative;
-    /* background-color: pink; */
     margin-top: -10%;
     margin-bottom: 3%;
 }
@@ -89,14 +87,12 @@
     justify-content: center;
     position: relative;
     max-height: 500px;
-    /* background: linear-gradient(to bottom, rgb(152, 154, 156), rgb(226, 228, 230)); */
     background-color: #f8a526;
     border-radius: 10px;
     width: 150%;
 }
 
 .comments{
-    /* max-height: 60%; */
     padding: 10px;
     margin: 10px;
     overflow-y: auto;
@@ -128,7 +124,6 @@
 .userComments .icon{
     height: 10%;
     width: 10%;
-    /* margin-left: -2%; */
     cursor: pointer;
 }
 
@@ -174,17 +169,17 @@
     font-size: 18px;
     margin-top: 1%;
     margin-bottom: 5%;
-}
+} */
 
 /* modal when user presses on newpost */
 
-.newPostModal{
+/* .newPostModal{
     margin: auto;
     background-color: white;
     border-radius: 10px;
     width: 40vw;
     height: 90vh;
-    z-index: 1000; /* Ensure the modal appears above the overlay */
+    z-index: 1000; 
 }
 
 .newPostModal h1{
@@ -250,7 +245,7 @@
     padding: 10px 50px;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); /* Add darker orange shadow */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5); 
 }
 
 .newPost input[type=file]{
@@ -260,10 +255,10 @@
 .newPost button:hover{
     border: 3px solid #f8a526;
     background-color: white;
-}
+} */
 
 /* modal when user presses on another user's name */
-.userProfileModal{
+/* .userProfileModal{
     background-color: white;
     margin: auto;
     width: 100vh;
@@ -309,4 +304,4 @@
     align-items: center;
     margin: auto;
     border-radius: 10px;
-}
+} */
