--- a/src/style/chat.css
+++ b/src/style/chat.css
@@ -1,8 +1,16 @@
-.loadChatContainer{
+.chatContainer .loadChatContainer{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    background-color: #ffcf88;
+    height: 100vh;
+}
+
+.chatContainer .pageContainer{
+    height: 98vh; /* Adjust as needed */
+    background-color: #f8a526;
+    margin: 10px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
-    margin-left: 20%;
-    background-color: pink;
 }
