--- a/src/style/home.css
+++ b/src/style/home.css
@@ -121,13 +121,14 @@
     text-align: center;
 }
 
+/* x button header */
 .modalHeader{
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #f8a526;
     padding: 10px 0px;
-    font-size: 28px;
+    font-size: 20px;
 }
 
 .bodyModalContainer{
@@ -139,6 +140,11 @@
 
 .modalHeader button{
     border: none;
+    height: 50px;
+}
+
+.modalHeader button:hover{
+    background-color: white;
 }
 
 .newPost{
@@ -192,6 +198,66 @@
     background-color: white;
 }
 
+/* modal when user presses on another user's name */
+.userProfileModal{
+    background-color: white;
+    margin: auto;
+    width: 100vh;
+    height: 90vh;
+    z-index: 1000;
+    border-radius: 10px;
+}
+
+.userProfileModal .profileContainer{
+    display: flex;
+    justify-content: center;
+    background-color: #BEC0C2;
+    padding: 20px 0px;
+}
+
+.userProfileModal .profileContainer img{
+    width: 20%;
+    border-radius: 10px;
+}
+
+.userBodyModalContainer .profileDescContainer{
+    width: 30%;
+    margin: 0 10px;
+    padding: 0 30px;
+    border-radius: 10px;
+    flex-direction: column;
+    border: solid 3px rgb(153, 152, 152);
+}
+
+.userBodyModalContainer .userProfilePostContainer{
+    display: flex;
+    justify-content: center;
+}
+
+.userProfilePostContainer .userPostContainer{
+    background-color: rgb(221, 221, 221);
+    border-radius: 10px;
+    margin: 30px 0px;
+}
+
+.userProfilePostContainer .nameDateContainer{
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: rgb(221, 221, 221);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.5);
+    justify-content: space-between;
+}
+
+/* title and desc of the post */
+.userProfilePostContainer .postBodyContainer{
+    box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
+    border-radius: 0px 0px 10px 10px;
+    padding: 10px 20px;
+}
+
 /* third column in grid layout */
 .suggested{
     background-color: #f8a526;
@@ -199,3 +265,5 @@
     border-radius: 10px;
     height: 98vh;
 }
+
+
