--- a/src/style/friend.css
+++ b/src/style/friend.css
@@ -20,6 +20,7 @@
     scrollbar-width: none;  /* Firefox */
 }
 
+/* add friend modal */
 .addFriendModal{
     margin: auto;
     background-color: white;
@@ -27,12 +28,8 @@
     width: 80vw;
     height: 90vh;
     z-index: 1000; /* Ensure the modal appears above the overlay */
-    overflow: hidden !important;
-}
-
-.addFriendModal .friendBodyContainer{
-    background-color: pink;
-    height: 100vh;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .addFriendModal .friendHeadContainer{
@@ -47,4 +44,90 @@
     align-items: center;
     gap: 10px;
 }
+
+.friendHeadContainer .searchContainer input[type=text]{
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background-color: #d6d6d6;
+    font-size: 20px;
+}
+
+.searchContainer .icon{
+    height: 30px;
+}
+
+#userFoundStatus{
+    font-weight: bold;
+}
+
+/* friend search */
+.matchedUserOuterContainer{
+    margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.matchUserContainer{
+    background-color: #d6d6d6;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 10px;
+    width: 45%;
+    height: 100%;
+}
+
+.matchedUserOuterContainer img{
+    margin: 20px;
+    border-radius: 10px;
+    height: 30%;
+    width: 20%;
+    cursor: pointer;
+}
+
+.matchUserContainer h1{
+    margin-top: -3%;
+    margin-bottom: -3%;
+    cursor: pointer;
+}
+
+.matchUserContainer h1:hover{
+    color: #b16a00;
+}
+
+.matchUserContainer .userDescOuterContainer{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* Hide any content that exceeds the container's dimensions */
+    text-overflow: ellipsis; /* Add ellipsis for text overflow */
+}
+
+/* user profile modal */
+.userProfileModalInFriend{
+    background-color: white;
+    margin: auto;
+    width: 150vh;
+    height: 90vh;
+    z-index: 1000;
+    border-radius: 10px;
+}
+
+.profileFriendDescContainer{
+    width: 30%;
+    padding: 0 10px;
+    border-radius: 10px;
+    flex-direction: column;
+    border: solid 3px rgb(153, 152, 152);
+    overflow-y: auto;
+}
+
+
+
+
+
+
 
