--- a/src/style/home.css
+++ b/src/style/home.css
@@ -31,14 +31,19 @@
     width: 95%;
     margin: 15px;
     border-radius: 10px;
-    background-color: rgb(221, 221, 221);
     border-radius: 10px;
     /* padding: 0px 20px; */
 }
 
+.postContainer .postImgContainer{
+    background-color: black;
+}
+
 .pageContainer .postContainer .imgPost{
-    width: 100%;
-    height: 40%;
+    width: 50%;
+    display: block; /* Remove any potential whitespace */
+    margin: auto; /* Center horizontally */
+    background-color: black ;
 }
 
 /* userpfp, name, and date on post */
@@ -52,11 +57,12 @@
     border-top-right-radius: 10px;
     box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.5);
     cursor: pointer;
+    background-color: rgb(221, 221, 221);
 }
 
 .pageContainer .userHeaderContainer h1{
     font-size: 30px;
-    margin-bottom: -10%;
+    margin-bottom: -3%;
     text-decoration: underline;
 }
 
@@ -79,14 +85,16 @@
 /* title of post */
 .postContainer2 h2{
     font-size: 35px;
-    padding: 5% 20px 0px;
-    margin-top: -3%;
+    padding: 3% 20px 0px;
+    margin-bottom: -0.5%;
 }
 
 .postBodyContainer {
     /* Left, right, and bottom inner shadow */
     box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
+    background-color: rgb(221, 221, 221);
+    margin-top: -3.6%;
 }
 
 /* description of post */
@@ -209,7 +217,7 @@
     border-radius: 10px;
 }
 
-.userProfileModal .profileContainer{
+.userProfileModal .profileContainer, .userProfileModalInFriend .profileContainer{
     display: flex;
     justify-content: center;
     background-color: #E9E9E9;
@@ -217,7 +225,7 @@
     gap: 10px;
 }
 
-.userProfileModal .descContainerSide{
+.userProfileModal .descContainerSide, .userProfileModalInFriend .descContainerSide{
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -225,7 +233,7 @@
     gap: 10px;
 }
 
-.userProfileModal .profileContainer img{
+.userProfileModal .profileContainer img, .userProfileModalInFriend img{
     width: 20%;
     border-radius: 10px;
 }
@@ -240,14 +248,14 @@
     overflow-y: auto;
 }
 
-.userBodyModalContainer .userButtons button{
+.addFriendBtn{
     background-color: #f8a526;
     padding: 10px;
     border-radius: 10px;
     font-weight: bold;
 }
 
-.userBodyModalContainer .userButtons button:hover{
+.addFriendBtn:hover{
     background-color: #af741c; 
 }
 
@@ -257,9 +265,17 @@
 }
 
 .userProfilePostContainer .userPostContainer{
-    background-color: #E9E9E9;
+    background-color: black;
     border-radius: 10px;
     margin: 30px 0px;
+    width: 50%;
+}
+
+.userProfilePostContainer .userPostContainer img{
+    width: 70%;
+    display: block;
+    margin: auto;
+    border-radius: 0px !important;
 }
 
 .userProfilePostContainer .nameDateContainer{
@@ -282,6 +298,7 @@
     box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
     padding: 10px 20px;
+    margin: 0;
 }
 
 /* modal popup for comments */
