--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -36,6 +36,7 @@
     /* border: solid 3px; */
 }
 
+
 .profileContainer .descContainer{
     /* background-color: rgb(153, 152, 152); */
     width: 30%;
@@ -51,10 +52,23 @@
 }
 
 /* user's post section */
+.userFeedContainer{
+    display: flex;
+    justify-content: center;
+}
+
 .userFeedContainer .userPostContainer{
     background-color: rgb(221, 221, 221);
     border-radius: 10px;
     margin: 30px 0px;
+    width: 60%;
+    background-color: black;
+}
+
+.userFeedContainer .userPostContainer img{
+    width: 70%;
+    display: block;
+    margin: auto;
 }
 
 .userFeedContainer .nameDateContainer{
@@ -76,6 +90,7 @@
     box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
     padding: 10px 20px;
+    margin-top: 0%;
 }
 
 /* edit profile popup */
