--- a/src/style/friend.css
+++ b/src/style/friend.css
@@ -51,11 +51,17 @@
     outline: none;
     border: none;
     background-color: #d6d6d6;
+    border: 3px rgb(173, 173, 173) solid;
     font-size: 20px;
 }
 
 .searchContainer .icon{
     height: 30px;
+}
+
+.searchContainer .icon:hover{
+    color: #b16a00;
+    cursor: pointer;
 }
 
 #userFoundStatus{
@@ -73,6 +79,7 @@
 
 .matchUserContainer{
     background-color: #d6d6d6;
+    border: 3px rgb(173, 173, 173) solid;
     display: flex;
     align-items: center;
     border-radius: 20px;
@@ -99,11 +106,15 @@
     color: #b16a00;
 }
 
-.matchUserContainer .userDescOuterContainer{
+.matchUserContainer .userDescOuterContainer, .friendListContainer .userDescOuterContainer{
     display: flex;
     flex-direction: column;
     overflow: hidden; /* Hide any content that exceeds the container's dimensions */
     text-overflow: ellipsis; /* Add ellipsis for text overflow */
+}
+
+#friendPfp{
+    width: 40%;
 }
 
 /* user profile modal */
@@ -125,9 +136,48 @@
     overflow-y: auto;
 }
 
+/* accept/decline friend req buttons */
+.accDelBtns{
+    display: flex;
+    gap: 10px;
+}
 
+/* friend list */
+.friendsList{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    overflow-y: auto;
+}
 
+.friendSection h1{
+    font-size: 30px;
+    margin-bottom: 50px;
+}
 
+.friendSection h2{
+    font-size: 30px;
+    text-decoration: underline;
+}
+
+.friendListContainer{
+    background-color: #d6d6d6;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 10px;
+    gap: 20px;
+    width: 40%;
+    border: 3px rgb(173, 173, 173) solid;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s, box-shadow 0.3s; 
+}
+
+.friendListContainer img{
+    border-radius: 15px;
+}
 
 
 
