--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -54,6 +54,7 @@
 /* user's post section */
 .userFeedContainer{
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -61,12 +62,12 @@
     background-color: rgb(221, 221, 221);
     border-radius: 10px;
     margin: 30px 0px;
-    width: 60%;
+    width: 100%;
     background-color: black;
 }
 
 .userFeedContainer .userPostContainer img{
-    width: 70%;
+    width: 80%;
     display: block;
     margin: auto;
 }
