--- a/src/style/home.css
+++ b/src/style/home.css
@@ -50,8 +50,7 @@
 .pageContainer .userHeaderContainer{
     display: flex;
     align-items: center;
-    gap: 10px;
-    /* margin: 10px 10px 10px 0; */
+    gap: 20px;
     padding: 10px 20px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -62,7 +61,7 @@
 
 .pageContainer .userHeaderContainer h1{
     font-size: 30px;
-    margin-bottom: -3%;
+    margin-bottom: -10%;
     text-decoration: underline;
 }
 
@@ -79,7 +78,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensures the image covers the container without distortion */
-    border-radius: 10px; /* Adjust radius as needed */
+    border-radius: 500px; 
+    border: 3px rgb(173, 173, 173) solid;
+
 }
 
 .userHeaderContainer .imgContainer img:hover, #friendPfp:hover, .matchedUserOuterContainer img:hover{
@@ -94,17 +95,22 @@
     margin-bottom: -0.5%;
 }
 
-.postBodyContainer {
+.postBodyContainer{
     /* Left, right, and bottom inner shadow */
     box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
     background-color: rgb(221, 221, 221);
-    margin-top: -3.6%;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
-/* description of post */
-.postContainer2 .postDesc{
-    padding: 0px 20px;
+.postBodyContainer h2, .postBodyContainer p{
+    margin: 0;
+    padding: 0;
+}
+
+.postBodyContainer p{
+    padding-bottom: 30px;
 }
 
 /* like and comment btn container */
@@ -116,7 +122,7 @@
 }
 
 .footerContainer .icons{
-    width: 7%;
+    width: 6%;
     height: 10%;
     cursor: pointer;
 }
@@ -240,27 +246,47 @@
 
 .userProfileModal .profileContainer img, .userProfileModalInFriend img{
     width: 20%;
-    border-radius: 10px;
+    border-radius: 500px;
+    border: 3px rgb(173, 173, 173) solid;
 }
 
+/* username, description, and date joined on the profiles */
 .userBodyModalContainer .profileDescContainer{
-    width: 80%;
-    height: 80%;
-    padding: 0 10px;
-    border-radius: 10px;
-    flex-direction: column;
-    border: solid 3px rgb(153, 152, 152);
-    overflow-y: auto;
+    height: 100%;
+    width: 100%;
+    border-left: 2px solid black;
+    padding-left: 10px;
 }
 
-.addFriendBtn, #accFriBtn, #decFriBtn, #removeFriBtn{
+.profileDescContainer #userDesc{
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 40%;
+    margin: 10px 0;
+}
+
+.profileDescContainer h1{
+    font-size: 35px;
+}
+
+.profileDescContainer #userDate{
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.profileDescContainer h1, .profileDescContainer p {
+    margin: 0; /* Reset margin */
+    padding: 0; /* Reset padding */
+}
+
+.addFriendBtn, #accFriBtn, #decFriBtn, #removeFriBtn, #removeBtn, #nvmBtn{
     background-color: #f8a526;
     padding: 10px 20px;
     border-radius: 10px;
     font-weight: bold;
 }
 
-.addFriendBtn:hover, #accFriBtn:hover, #decFriBtn:hover, #removeFriBtn:hover{
+.addFriendBtn:hover, #accFriBtn:hover, #decFriBtn:hover, #removeFriBtn:hover, #removeBtn:hover, #nvmBtn:hover{
     background-color: #af741c; 
 }
 
@@ -306,7 +332,11 @@
     box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
     padding: 10px 20px;
-    margin: 0;
+}
+
+.postBodyContainer h2{
+    font-size: 30px;
+    padding: 10px 0px;
 }
 
 /* modal popup for comments */
