--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -27,28 +27,45 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 20px;
     padding: 20px 0px;
 }
 
 .profileContainer .headerContainer img{
-    width: 20%;
-    border-radius: 20px;
-    /* border: solid 3px; */
+    width: 20vh;
+    border-radius: 500px;
+    border: 3px rgb(173, 173, 173) solid;
 }
-
 
 .profileContainer .descContainer{
     /* background-color: rgb(153, 152, 152); */
+    height: 100%;
     width: 30%;
-    margin: 0 10px;
-    padding: 0 30px;
-    border-radius: 20px;
-    flex-direction: column;
-    border: solid 3px rgb(153, 152, 152);
+    border-left: 2px solid black;
+    padding-left: 10px;
 } 
 
 .descContainer #userName{
-    font-size: 30px;
+    font-size: 35px;
+    height: 20%;
+}
+
+.descContainer h1, .descContainer p {
+    margin: 0; /* Reset margin */
+    padding: 0; /* Reset padding */
+}
+
+.descContainer #userDesc{
+    height: 60%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin: 10px 0;
+}
+
+.descContainer #userDate{
+    font-weight: bold;
+    
 }
 
 /* user's post section */
