--- a/src/style/home.css
+++ b/src/style/home.css
@@ -360,26 +360,33 @@
     height: 100%;
 }
 
+.commentModal .currentPostContainer{
+    display: flex;
+    justify-content: center;
+}
+
 .commentModal .postContainer{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: #ffcf88;
+    padding: 20px;
+    width: 90%;
     border-radius: 10px;
-    padding: 30px 30px 9% 30px;
     margin: 10px;
 }
 
 .commentModal .userHeaderContainer{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
+    margin-bottom: 20px;
 }
 
 .commentModal .userHeaderContainer .imgContainer {
-    width: 10%; /* Adjust percentage as needed */
-    height: 5%;
+    width: 20%; /* Adjust percentage as needed */
     position: relative; /* This is necessary for the padding-bottom trick */
-    padding-bottom: 10%; /* This creates a square container */
+    padding-bottom: 20%; /* This creates a square container */
 }
 
 .commentModal .userHeaderContainer .imgContainer img{
@@ -389,16 +396,32 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensures the image covers the container without distortion */
-    border-radius: 10px; /* Adjust radius as needed */
+    border-radius: 500px; /* Adjust radius as needed */
+    border: 3px rgb(173, 173, 173) solid;
 }
 
 .commentModal .nameDateContainer h2{
-    font-size: 20px;
+    font-size: 30px;
 }
 
+.commentModal .nameDateContainer h2, .commentModal .nameDateContainer p{
+    margin: 0; /* Reset margin */
+    padding: 0; /* Reset padding */
+}
+
+.captionContainer h2, .captionContainer p{
+    margin: 0; /* Reset margin */
+    padding: 0; /* Reset padding */
+}
+
+.captionContainer h2{
+    margin-top: 20px;
+}
+
+
 .commentModal .imgPost{
-    height: 40%;
-    width: 50%;
+    height: 80%;
+    width: 100%;
 }
 
 /* comments on the right */
@@ -439,7 +462,7 @@
 .commentDateContainer{
     background-color: #ffcf88;
     margin: -15px 10px 30px 0;
-    border-radius: 10px;
+    border-radius: 0 10px 10px;
     padding: 5px 10px;
 }
 
